Fix some deprecated api usages (#779)